--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,112 +67,122 @@ strong {
 }
 
 /* line 23, ../sass/_partials/_base-styles.scss */
+.primary {
+  color: #71519d;
+}
+
+/* line 27, ../sass/_partials/_base-styles.scss */
+.bold {
+  font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
+}
+
+/* line 31, ../sass/_partials/_base-styles.scss */
 .flash.flash-success {
   text-align: center;
   color: #006922;
 }
 
-/* line 28, ../sass/_partials/_base-styles.scss */
+/* line 36, ../sass/_partials/_base-styles.scss */
 .container {
   width: 60%;
   margin: 0 auto;
 }
 @media (max-width: 1100px) {
-  /* line 28, ../sass/_partials/_base-styles.scss */
+  /* line 36, ../sass/_partials/_base-styles.scss */
   .container {
     width: 65%;
   }
 }
 @media (max-width: 900px) {
-  /* line 28, ../sass/_partials/_base-styles.scss */
+  /* line 36, ../sass/_partials/_base-styles.scss */
   .container {
     width: 70%;
   }
 }
 @media (max-width: 768px) {
-  /* line 28, ../sass/_partials/_base-styles.scss */
+  /* line 36, ../sass/_partials/_base-styles.scss */
   .container {
     width: 85%;
   }
 }
 
-/* line 42, ../sass/_partials/_base-styles.scss */
+/* line 50, ../sass/_partials/_base-styles.scss */
 h1 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 3rem;
 }
 
-/* line 46, ../sass/_partials/_base-styles.scss */
+/* line 54, ../sass/_partials/_base-styles.scss */
 h2 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 2.5rem;
 }
 
-/* line 50, ../sass/_partials/_base-styles.scss */
+/* line 58, ../sass/_partials/_base-styles.scss */
 h3 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 2rem;
 }
 
-/* line 54, ../sass/_partials/_base-styles.scss */
+/* line 62, ../sass/_partials/_base-styles.scss */
 h4 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 2rem;
 }
 
-/* line 58, ../sass/_partials/_base-styles.scss */
+/* line 66, ../sass/_partials/_base-styles.scss */
 h5 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 1.8rem;
 }
 
-/* line 62, ../sass/_partials/_base-styles.scss */
+/* line 70, ../sass/_partials/_base-styles.scss */
 h6 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
 }
 
-/* line 67, ../sass/_partials/_base-styles.scss */
+/* line 75, ../sass/_partials/_base-styles.scss */
 a,
 a:visited {
   color: #2b2b2b;
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
 }
 
-/* line 73, ../sass/_partials/_base-styles.scss */
+/* line 81, ../sass/_partials/_base-styles.scss */
 a:hover,
 a:focus,
 a:active {
   color: #515151;
 }
 
-/* line 79, ../sass/_partials/_base-styles.scss */
+/* line 87, ../sass/_partials/_base-styles.scss */
 a.green-link,
 a.green-link:visited {
   color: #71519d;
 }
 
-/* line 84, ../sass/_partials/_base-styles.scss */
+/* line 92, ../sass/_partials/_base-styles.scss */
 a.green-link:focus,
 a.green-link:hover,
 a.green-link:active {
   color: #4d376b;
 }
 
-/* line 90, ../sass/_partials/_base-styles.scss */
+/* line 98, ../sass/_partials/_base-styles.scss */
 a.link-light,
 a.link-light:visited {
   color: #b288bc;
 }
 
-/* line 95, ../sass/_partials/_base-styles.scss */
+/* line 103, ../sass/_partials/_base-styles.scss */
 a.link-light:focus,
 a.link-light:hover,
 a.link-light:active {
   color: #91599e;
 }
 
-/* line 101, ../sass/_partials/_base-styles.scss */
+/* line 109, ../sass/_partials/_base-styles.scss */
 input, textarea {
   padding: 6px;
   border: 1px solid #c6c6c6;
@@ -180,12 +190,12 @@ input, textarea {
   margin: 6px 0 8px 0;
 }
 
-/* line 108, ../sass/_partials/_base-styles.scss */
+/* line 116, ../sass/_partials/_base-styles.scss */
 label {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
 }
 
-/* line 112, ../sass/_partials/_base-styles.scss */
+/* line 120, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent, .btn-white-transparent-xl, .btn-contrast-transparent, .btn-contrast-transparent-xl, .btn-primary, .btn-primary-xl, .btn-secondary, .btn-secondary-xl, .btn-dark-grey, .btn-dark-grey-xl {
   display: inline-block;
   padding: 6px 12px;
@@ -206,134 +216,134 @@ label {
   text-decoration: none;
 }
 
-/* line 132, ../sass/_partials/_base-styles.scss */
+/* line 140, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent, .btn-white-transparent-xl {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid white;
   color: #2b2b2b;
 }
-/* line 137, ../sass/_partials/_base-styles.scss */
+/* line 145, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:hover, .btn-white-transparent-xl:hover, .btn-white-transparent:focus, .btn-white-transparent-xl:focus, .btn-white-transparent:active, .btn-white-transparent-xl:active {
   background-color: rgba(255, 255, 255, 0.9);
 }
-/* line 142, ../sass/_partials/_base-styles.scss */
+/* line 150, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:disabled, .btn-white-transparent-xl:disabled, .btn-white-transparent[disabled], [disabled].btn-white-transparent-xl {
   cursor: not-allowed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-/* line 149, ../sass/_partials/_base-styles.scss */
+/* line 157, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 155, ../sass/_partials/_base-styles.scss */
+/* line 163, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent, .btn-contrast-transparent-xl {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid #ffd400;
   color: #2b2b2b;
 }
-/* line 160, ../sass/_partials/_base-styles.scss */
+/* line 168, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent:hover, .btn-contrast-transparent-xl:hover, .btn-contrast-transparent:focus, .btn-contrast-transparent-xl:focus, .btn-contrast-transparent:active, .btn-contrast-transparent-xl:active {
   background-color: rgba(255, 255, 255, 0.9);
 }
-/* line 165, ../sass/_partials/_base-styles.scss */
+/* line 173, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent:disabled, .btn-contrast-transparent-xl:disabled, .btn-contrast-transparent[disabled], [disabled].btn-contrast-transparent-xl {
   cursor: not-allowed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-/* line 172, ../sass/_partials/_base-styles.scss */
+/* line 180, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 178, ../sass/_partials/_base-styles.scss */
+/* line 186, ../sass/_partials/_base-styles.scss */
 .btn-primary, .btn-primary-xl {
   background-color: #71519d;
   border: 1px solid #71519d;
   color: white;
 }
-/* line 183, ../sass/_partials/_base-styles.scss */
+/* line 191, ../sass/_partials/_base-styles.scss */
 .btn-primary:hover, .btn-primary-xl:hover, .btn-primary:focus, .btn-primary-xl:focus, .btn-primary:active, .btn-primary-xl:active {
   background-color: #4d376b;
   border-color: #4d376b;
   color: white;
 }
-/* line 190, ../sass/_partials/_base-styles.scss */
+/* line 198, ../sass/_partials/_base-styles.scss */
 .btn-primary:disabled, .btn-primary-xl:disabled, .btn-primary[disabled], [disabled].btn-primary-xl {
   cursor: not-allowed;
   background-color: #987ebc;
   border-color: #987ebc;
 }
 
-/* line 198, ../sass/_partials/_base-styles.scss */
+/* line 206, ../sass/_partials/_base-styles.scss */
 .btn-primary-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 204, ../sass/_partials/_base-styles.scss */
+/* line 212, ../sass/_partials/_base-styles.scss */
 a.btn-primary, a.btn-primary-xl {
   color: white;
 }
 
-/* line 208, ../sass/_partials/_base-styles.scss */
+/* line 216, ../sass/_partials/_base-styles.scss */
 .btn-secondary, .btn-secondary-xl {
   background-color: #b288bc;
   border: 1px solid #b288bc;
   color: #2b2b2b;
 }
-/* line 213, ../sass/_partials/_base-styles.scss */
+/* line 221, ../sass/_partials/_base-styles.scss */
 .btn-secondary:hover, .btn-secondary-xl:hover, .btn-secondary:focus, .btn-secondary-xl:focus, .btn-secondary:active, .btn-secondary-xl:active {
   background-color: #91599e;
   border-color: #91599e;
 }
-/* line 219, ../sass/_partials/_base-styles.scss */
+/* line 227, ../sass/_partials/_base-styles.scss */
 .btn-secondary:disabled, .btn-secondary-xl:disabled, .btn-secondary[disabled], [disabled].btn-secondary-xl {
   cursor: not-allowed;
   background-color: #d2b9d8;
   border-color: #d2b9d8;
 }
 
-/* line 227, ../sass/_partials/_base-styles.scss */
+/* line 235, ../sass/_partials/_base-styles.scss */
 .btn-secondary-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 233, ../sass/_partials/_base-styles.scss */
+/* line 241, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey, .btn-dark-grey-xl {
   background-color: #2b2b2b;
   border: 1px solid #2b2b2b;
   color: white;
 }
-/* line 238, ../sass/_partials/_base-styles.scss */
+/* line 246, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:hover, .btn-dark-grey-xl:hover, .btn-dark-grey:focus, .btn-dark-grey-xl:focus, .btn-dark-grey:active, .btn-dark-grey-xl:active {
   background-color: #515151;
 }
-/* line 243, ../sass/_partials/_base-styles.scss */
+/* line 251, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:disabled, .btn-dark-grey-xl:disabled, .btn-dark-grey[disabled], [disabled].btn-dark-grey-xl {
   cursor: not-allowed;
   background-color: rgba(43, 43, 43, 0.6);
 }
 
-/* line 250, ../sass/_partials/_base-styles.scss */
+/* line 258, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 256, ../sass/_partials/_base-styles.scss */
+/* line 264, ../sass/_partials/_base-styles.scss */
 .row {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   width: 100%;
 }
-/* line 261, ../sass/_partials/_base-styles.scss */
+/* line 269, ../sass/_partials/_base-styles.scss */
 .row .column {
   flex-basis: 0;
   flex-grow: 1;
@@ -341,12 +351,12 @@ a.btn-primary, a.btn-primary-xl {
   padding: 15px;
 }
 
-/* line 269, ../sass/_partials/_base-styles.scss */
+/* line 277, ../sass/_partials/_base-styles.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 273, ../sass/_partials/_base-styles.scss */
+/* line 281, ../sass/_partials/_base-styles.scss */
 .entire-width {
   width: 100%;
 }
