--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="R1elQ-g9LEuSr46DWvhajJql1jfzoY36QwtJ3lqfwNs" />
     <title>LAKRAN VMS Services</title>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./public/images/favicons/apple-touch-icon.png">
@@ -49,7 +50,7 @@
     <div class="slide-container">
         <ul>
             <li class="myslides slide-1">
-                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="LAKRAN VMS Services">
                 <div class="text">Digitalisering van inhuurprocessen om de juiste strategische keuzes te kunnen maken</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('why')" class="btn-white-transparent-xl">Onze redenen</a><br />
@@ -57,7 +58,7 @@
                 </div>
             </li>
             <li class="myslides slide-2">
-                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="LAKRAN VMS Services">
                 <div class="text">Wij bieden verschillende vormen dienstverlening aan om jou op weg te helpen</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('what')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
@@ -65,7 +66,7 @@
                 </div>
             </li>
             <li class="myslides slide-3">
-                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="LAKRAN VMS Services">
                 <div class="text">Stretch your flex; <br/> Zet jij de juiste stappen? <br/> Is jouw bedrijf voldoende wendbaar?</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('how')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
@@ -115,7 +116,7 @@
         <div class="footer-text" itemscope itemtype="http://schema.org/LocalBusiness">
             <strong itemprop="name">LAKRAN VMS Services</strong> <br />
             <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                <span itemprop="streetAddress">Apeldoornseweg 51</span><br />
+                <span itemprop="streetAddress">Meander 251, 2e etage</span><br />
                 <span itemprop="postOfficeBoxNumber">Postbus 115</span><br />
                 <span itemprop="postalCode">6800 AC</span> <span itemprop="addressLocality">Arnhem</span><br />
                 <span itemprop="addressCountry">The Netherlands</span>
@@ -153,7 +154,7 @@
 <script>
     // Load Google Maps
     function initMap() {
-        var uluru = {lat: 51.987260, lng: 5.908726};
+        var uluru = {lat: 51.976929, lng: 5.967093};
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 15,
             center: uluru
